--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-remote_theme: "dracula/gh-pages"
+# your site color theme, true for dark theme, 
+# false to light theme, auto to switch with system.
+dark-theme: auto
